add post links to use nbviewer, add .gitignore

--- a/_posts/2019-05-30-py_mpp.md
+++ b/_posts/2019-05-30-py_mpp.md
@@ -19,7 +19,12 @@ retrieved & 0.1 is added to the data, this result is stored in the Chief's
 global queue. When the Chief's global queue's size is greater than 3, the
 result is retrieved & printed on screen.
 
-Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/py/py_mpp.ipynb)
+---
+
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/misc/py_mpp.ipynb)
+
+If Github is not loading the Jupyter notebook, a known Github issue, click [here](https://nbviewer.jupyter.org/github/ChuaCheowHuan/reinforcement_learning/tree/master/misc/py_mpp.ipynb) to view the notebook on
+Jupyter's nbviewer.
 
 ---
 
