--- a/_posts/2019-06-09-dist_tf.md
+++ b/_posts/2019-06-09-dist_tf.md
@@ -13,7 +13,10 @@ Python multiprocessing package.
 
 A tf.FIFOQueue is used as a storage across processes.
 
-Code on my [Github](https://github.com/ChuaCheowHuan/misc_code_examples/blob/master/tf/dist_tf/dist_tf.ipynb)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/misc/dist_tf.ipynb)
+
+If Github is not loading the Jupyter notebook, a known Github issue, click [here](https://nbviewer.jupyter.org/github/ChuaCheowHuan/reinforcement_learning/tree/master/misc/dist_tf.ipynb) to view the notebook
+on Jupyter's nbviewer.
 
 ---
 
