--- a/_posts/2019-06-25-RND.md
+++ b/_posts/2019-06-25-RND.md
@@ -21,7 +21,9 @@ seconds to complete 300 episodes on Google's Colab.
 
 Edit: A new version which corrects a numerical error(causes nan action) takes
 780.2065596580505 seconds for 300 episodes. Both versions have similar results.
-The URL for the new version is updated. Added random seeds for numpy & Tensorflow global seed & ops seed achieve better consistency & faster convergence.
+The URL for the new version is updated. Added random seeds for numpy &
+Tensorflow global seed & ops seed achieve better consistency & faster
+convergence.
 
 Checkout the <a href="https://chuacheowhuan.github.io/RND/#charts">resulting
 charts</a> from the program output.
@@ -32,6 +34,9 @@ Code on my Github:
 
 - [Jupyter notebook](https://github.com/ChuaCheowHuan/reinforcement_learning/blob/master/RND_PPO/RND_PPO_cont_ftr_nsn_mtCar_php.ipynb)
 (The Jupyter notebook, which also contain the resulting charts at the end, can be run directly on Google's Colab.)
+
+If Github is not loading the Jupyter notebook, a known Github issue, click [here](https://nbviewer.jupyter.org/github/ChuaCheowHuan/reinforcement_learning/blob/master/RND_PPO/RND_PPO_cont_ftr_nsn_mtCar_php.ipynb)
+to view the notebook on Jupyter's nbviewer.
 
 ---
 
