--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -12,7 +12,10 @@ A **Deep Q Network** implementation in tensorflow with target network & random
 experience replay. The code is tested with Gym's discrete action space
 environment, CartPole-v0 on Colab.
 
-Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/DQN/DQN_cartpole.ipynb)
+
+If Github is not loading the Jupyter notebook, a known Github issue, click [here](https://nbviewer.jupyter.org/github/ChuaCheowHuan/reinforcement_learning/blob/master/DQN_variants/DQN/DQN_cartpole.ipynb) to
+view the notebook on Jupyter's nbviewer.
 
 ---
 
