--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -13,7 +13,10 @@ A **Dueling Double Deep Q Network (Dueling DDQN)** implementation in tensorflow
 with random experience replay. The code is tested with Gym's discrete action
 space environment, CartPole-v0 on Colab.
 
-Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN)
+Code on my [Github](https://github.com/ChuaCheowHuan/reinforcement_learning/tree/master/DQN_variants/duel_DDQN/duelling_DDQN_cartpole.ipynb)
+
+If Github is not loading the Jupyter notebook, a known Github issue, click [here](https://nbviewer.jupyter.org/github/ChuaCheowHuan/reinforcement_learning/blob/master/DQN_variants/duel_DDQN/duelling_DDQN_cartpole.ipynb)
+to view the notebook on Jupyter's nbviewer.
 
 ---
 
