--- a/_posts/2019-07-04-tf_graph.md
+++ b/_posts/2019-07-04-tf_graph.md
@@ -35,8 +35,12 @@ writer.close()
 
 Run this command in terminal to start tensorboard:
 ```
-tensorboard --logdir log
+$ tensorboard --logdir log
+
+$ tensorboard --logdir ~/ray_results
 ```
+Where log is the log folder.
+
 Navigate to ```http://127.0.0.1:6006``` in your browser to access Tensorflow.
 Your graph is in the graph tab.
 
