include tf graph

--- a/_posts/2019-03-01-DQN.md
+++ b/_posts/2019-03-01-DQN.md
@@ -97,6 +97,12 @@ td_target = tf.stop_gradient(td_target)
 
 ---
 
+## Tensorflow graph:
+
+![image](/assets/images/blog/DQN_tf_graph.png)
+
+---
+
 ## References:
 
 [Human-level control through deep reinforcement learning
