--- a/_posts/2019-03-10-Duel_DDQN.md
+++ b/_posts/2019-03-10-Duel_DDQN.md
@@ -80,6 +80,12 @@ def built_net(self, var_scope, w_init, b_init, features, num_hidden, num_output)
 
 ---
 
+## Tensorflow graph:
+
+![image](/assets/images/blog/Duel_DDQN_tf_graph.png)
+
+---
+
 ## References:
 
 [Dueling Network Architectures for Deep Reinforcement Learning
