--- a/_posts/2019-03-07-DDQN.md
+++ b/_posts/2019-03-07-DDQN.md
@@ -113,6 +113,12 @@ def td_target(self, s_next, r, done, model_s_next_Q_val, target_Q_val):
 
 ---
 
+## Tensorflow graph:
+
+![image](/assets/images/blog/DDQN_tf_graph.png)
+
+---
+
 ## References:
 
 [Deep Reinforcement Learning with Double Q-learning
