--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -8,27 +8,27 @@ Notes on the math for RNN back propagation through time(BPTT).
 
 ---
 
-$\hat{y} = f_y (U h_t + b_y)$
+$$\hat{y} = f_y (U h_t + b_y)$$
 
-$\hat{y}$  is the prediction.
-$U$ is the weight matrix after the hidden layer.
+$$\hat{y}$$  is the prediction.
+$$U$$ is the weight matrix after the hidden layer.
 
-$h_{t} = f_{h} (Vx_t + Wh_{t-1} + b_{h})$
+$$h_{t} = f_{h} (Vx_t + Wh_{t-1} + b_{h})$$
 
-$h_{t}$ is the hidden layer at time t.
-$f_{h}$ is the non linear function in the hidden layer.
-$V$ is the weight matrix before the hidden layer.
-$W_{h_{t-1}}$ is the weight matrix in the hidden layer at the previous time step.
-$b_{h}$ is the bias at the hidden layer.
+$$h_{t}$$ is the hidden layer at time t.
+$$f_{h}$$ is the non linear function in the hidden layer.
+$$V$$ is the weight matrix before the hidden layer.
+$$W_{h_{t-1}}$$ is the weight matrix in the hidden layer at the previous time step.
+$$b_{h}$$ is the bias at the hidden layer.
 
 ---
 
 No need to BPTT for this:
 
-$\frac{\delta L_{t}} {\delta U} =
+$$\frac{\delta L_{t}} {\delta U} =
 \sum_{i=0}^{T} \frac{\delta L_i} {\delta U} =
 \frac{\delta L_t} {\delta \hat{y}_t}
-\frac{\delta \hat{y}_t} {\delta U}$
+\frac{\delta \hat{y}_t} {\delta U}$$
 
 ---
 
@@ -36,7 +36,7 @@ $\frac{\delta L_{t}} {\delta U} =
 
 The loss at time t with respect to the weights in the hidden layer.
 
-$\frac{\delta L_{t}} {\delta W} =
+$$\frac{\delta L_{t}} {\delta W} =
 \frac{\delta L_{t}} {\delta \hat{y}_{t}}
 \frac{\delta \hat{y}_{t}} {\delta L_{t}}
 [
@@ -47,9 +47,9 @@ $\frac{\delta L_{t}} {\delta W} =
 \frac{\delta h_{t-2}} {\delta W}
 \frac{\delta h_{t}} {\delta h_{t-1}}
 \frac{\delta h_{t-1}} {\delta W} ) + ...
-]$
+]$$
 
-$=
+$$=
 \frac{\delta L_t} {\delta \hat{y}_t}
 \frac{\delta \hat{y}_t} {\delta h_t}
 \sum_{k=0}^{t} [ \frac{\delta h_{t}} {\delta h_{t-1}} ...
@@ -58,19 +58,19 @@ $=
 \frac{\delta h_{k+1}} {\delta h_k}
 (\frac{\delta h_{k}} {\delta W} ) )
 ( \frac{\delta h_{k+1}} {\delta h_k}
-(\frac{\delta h_k} {\delta W} ) ) ]$
+(\frac{\delta h_k} {\delta W} ) ) ]$$
 
-$=
+$$=
 \frac{\delta L_t} {\delta \hat{y}_t}
 \frac{\delta \hat{y}_t} {\delta h_t}
 \sum_{k=0}^{t}
 ( \prod_{i=k+1}^{t}
 \frac{\delta h_{i}} {\delta h_{i-1}} )
-\frac{\delta h_k} {\delta W} ]$
+\frac{\delta h_k} {\delta W} ]$$
 
 ---
 
-$\frac{\delta L_{t}} {\delta V}$
+$$\frac{\delta L_{t}} {\delta V}$$
 
 BPTT also needs to be done for calculating the loss with respect to weight matrix V.
 The dependence between hidden units and weight matrix V is  not only in one place.
