--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -8,18 +8,26 @@ Notes on the math for RNN back propagation through time(BPTT).
 
 ---
 
-$$\hat{y} = f_y (U h_t + b_y)$$
-
 $$\hat{y}$$  is the prediction.
+
 $$U$$ is the weight matrix after the hidden layer.
 
-$$h_{t} = f_{h} (Vx_t + Wh_{t-1} + b_{h})$$
+$$\hat{y} = f_y (U h_t + b_y)$$
+
+---
 
 $$h_{t}$$ is the hidden layer at time t.
+
 $$f_{h}$$ is the non linear function in the hidden layer.
+
 $$V$$ is the weight matrix before the hidden layer.
-$$W_{h_{t-1}}$$ is the weight matrix in the hidden layer at the previous time step.
+
+$$W_{h_{t-1}}$$ is the weight matrix in the hidden layer at the previous time
+step.
+
 $$b_{h}$$ is the bias at the hidden layer.
+
+$$h_{t} = f_{h} (Vx_t + Wh_{t-1} + b_{h})$$
 
 ---
 
