--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -44,6 +44,9 @@ $$\frac{\delta L_{t}} {\delta U} =
 
 The loss at time t with respect to the weights in the hidden layer.
 
+The terms in square brackets $$[]$$ are written in such a way the the leftmost
+term is the most recent term while the rightmost is the oldest term.
+
 $$\frac{\delta L_{t}} {\delta W} =
 \frac{\delta L_{t}} {\delta \hat{y}_{t}}
 \frac{\delta \hat{y}_{t}} {\delta L_{t}}
