--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -52,29 +52,29 @@ $$\frac{\delta L_{t}} {\delta W} =
 \frac{\delta \hat{y}_{t}} {\delta L_{t}}
 [
 \frac{\delta h_{t}} {\delta W} +
-( \frac{\delta h_{t}} {\delta h_{t-1}}
-\frac{\delta h_{t-1}} {\delta W} ) +
-( \frac{\delta h_{t}} {\delta h_{t-2}}
-\frac{\delta h_{t-2}} {\delta W}
+(
 \frac{\delta h_{t}} {\delta h_{t-1}}
-\frac{\delta h_{t-1}} {\delta W} ) + ...
+\frac{\delta h_{t-1}} {\delta W} ) +
+(
+\frac{\delta h_{t}} {\delta h_{t-1}}
+\frac{\delta h_{t-1}} {\delta h_{t-2}}
+\frac{\delta h_{t-2}} {\delta W}
+) + ...
 ]$$
 
 $$=
 \frac{\delta L_t} {\delta \hat{y}_t}
 \frac{\delta \hat{y}_t} {\delta h_t}
 \sum_{k=0}^{t} [ \frac{\delta h_{t}} {\delta h_{t-1}} ...
-( \frac{\delta h_{k+2}} {\delta h_{k+1}}
-\frac{\delta h_{k+1}} {\delta W}
+\frac{\delta h_{k+2}} {\delta h_{k+1}}
 \frac{\delta h_{k+1}} {\delta h_k}
-(\frac{\delta h_{k}} {\delta W} ) )
-( \frac{\delta h_{k+1}} {\delta h_k}
-(\frac{\delta h_k} {\delta W} ) ) ]$$
+\frac{\delta h_k} {\delta W}
+]$$
 
 $$=
 \frac{\delta L_t} {\delta \hat{y}_t}
 \frac{\delta \hat{y}_t} {\delta h_t}
-\sum_{k=0}^{t}
+[ \sum_{k=0}^{t}
 ( \prod_{i=k+1}^{t}
 \frac{\delta h_{i}} {\delta h_{i-1}} )
 \frac{\delta h_k} {\delta W} ]$$
