--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -65,7 +65,10 @@ $$\frac{\delta L_{t}} {\delta W} =
 $$=
 \frac{\delta L_t} {\delta \hat{y}_t}
 \frac{\delta \hat{y}_t} {\delta h_t}
-\sum_{k=0}^{t} [ \frac{\delta h_{t}} {\delta h_{t-1}} ...
+\sum_{k=0}^{t}
+[
+\frac{\delta h_{t}} {\delta h_{t-1}}  
+\frac{\delta h_{t-1}} {\delta h_{t-2}} ...
 \frac{\delta h_{k+2}} {\delta h_{k+1}}
 \frac{\delta h_{k+1}} {\delta h_k}
 \frac{\delta h_k} {\delta W}
