--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -48,7 +48,7 @@ The terms in square brackets $$[]$$ are written in such a way the the leftmost
 term is the most recent term while the rightmost is the oldest term.
 
 When k = t, the product sequence (or factor) on the left of
-$\frac{\delta h_{t}} {\delta W}$, equals 1.
+$$\frac{\delta h_{t}} {\delta W}$$, equals 1.
 
 $$\frac{\delta L_{t}} {\delta W} =
 \frac{\delta L_{t}} {\delta \hat{y}_{t}}
