--- a/_posts/2020-01-12-RNN_BPTT.md
+++ b/_posts/2020-01-12-RNN_BPTT.md
@@ -44,7 +44,7 @@ $$\frac{\delta L_{t}} {\delta U} =
 
 The loss at time t with respect to the weights in the hidden layer.
 
-The terms in square brackets $$[]$$ are written in such a way the the leftmost
+The terms in square brackets $$[]$$ are written in such a way that the leftmost
 term is the most recent term while the rightmost is the oldest term.
 
 When k = t, the product sequence (or factor) on the left of
