--- a/_posts/2020-01-13-RNN_BPTT_2.md
+++ b/_posts/2020-01-13-RNN_BPTT_2.md
@@ -5,16 +5,18 @@ title: RNN backprop thru time(BPTT), part 2, $$\frac{\delta h_{t}} {\delta h_{t-
 ---
 
 Notes on the math for RNN back propagation through time(BPTT), part 2. The 1st
-derivative of $$h_t$$ given respect to $$h_{t-1}$$.
+derivative of $$h_t$$ with respect to $$h_{t-1}$$.
 
 ---
-Given a series X:
+Given a series:
 $$X = \{x_1, x_2...x_n\}$$
 
-Given a set of functions that takes in X:
+Given a set of functions that takes in $$X$$:
+
 $$Y = F(X)$$
 
 We have a vector of functions:
+
 $$Y =
 \begin{pmatrix}
 f_1(X) \\
@@ -39,6 +41,8 @@ $$\begin{pmatrix}
 
 For the calculations below, we are only interested in the diagonal derivatives
 which are terms with the same subscript in the nominator & denominator (i.e: derivatives with respect to the same time step).
+
+$$\frac{\delta h_t} {\delta E_t} = diag(f'(E_t))$$
 
 ---
 
