--- a/_posts/2020-01-13-RNN_BPTT_2.md
+++ b/_posts/2020-01-13-RNN_BPTT_2.md
@@ -1,7 +1,7 @@
 ---
 layout: posts
 author: Huan
-title: RNN backprop thru time(BPTT), part 2, $$\frac{\delta h_{t}} {\delta h_{t-1}}$$
+title: RNN backprop thru time(BPTT part 2) $$\frac{\delta h_{t}} {\delta h_{t-1}}$$
 ---
 
 Notes on the math for RNN back propagation through time(BPTT), part 2. The 1st
