--- a/_posts/2020-01-13-RNN_BPTT_2.md
+++ b/_posts/2020-01-13-RNN_BPTT_2.md
@@ -46,7 +46,7 @@ $$\frac{\delta h_t} {\delta E_t} = diag(f'(E_t))$$
 
 ---
 
-Deriving $$\frac{\delta h_t} {\delta h_{t-1}}:
+Deriving $$\frac{\delta h_t} {\delta h_{t-1}}$$:
 
 $$Vx_t + Wh_{t-1} + b_{h} = E_t$$
 
